<?xml version="1.0"?>
<package format="2">
  <name>dji_m100_gazebo</name>
  <version>0.0.0</version>
  <description>The dji_m100_gazebo package</description>

  <maintainer email="tahsincankose@gmail.com">Tahsincan Kose</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <export>
    <gazebo_ros
          gazebo_model_path="${prefix}/models" />
  </export>
</package>
